Update README.md for version 2.0.0